--- a/style.css
+++ b/style.css
@@ -225,6 +225,12 @@ td
 	padding-left: 100px;
 
 }
+.intro{
+	width: 98%;
+	padding: 1%;
+	text-align: justify;
+	background-color: white;
+}
 @media screen and (max-width: 500px){
 nav ul{display: flex;}
 nav ul li{flex: 1 1 0;}
