--- a/style.css
+++ b/style.css
@@ -1,41 +1,41 @@
-.logo-text {
+.logo-text {/*properties for logo text*/
 	background:white;
 	font-family: 'Gugi', cursive;
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 35px;
 }
-header{
+header{/*properties of header*/
 	height: 30px;
 }
-h1{
+h1{/*property of h1*/
 	text-align: center;
 	
 	font-size: 40px;
 }
-h2{
+h2{/*property of h2 text*/
 	text-align: center;
 	font-family: 'Pacifico', cursive;
 	font-size: 30px;
 }
 
 
-nav{
+nav{/*property of navigation*/
 	width: 100%;
 font-family: 'Pacifico', cursive;
 font-size: 15px;
 background: #066d6b;
 }
-nav ul{
+nav ul{/*property of navigation*/
 	list-style-type: none;
 	padding: 0%;
 	height: 40px;
 }
-nav ul li{
+nav ul li{/*property of navigation*/
 	display: inline-block;
 	width: 180px;
 }
-nav a{
+nav a{/*property of navigation*/
 	text-decoration: none;
 	text-align: center;
 	color:white;
@@ -43,23 +43,23 @@ nav a{
 	padding: 10px;
 
 }
-nav ul li:hover{
+nav ul li:hover{/*property of navigation*/
 	background:#c09f80;
 }
  /*-------Body------*/
-body{
+body{/*property of body*/
 	margin: 0;
 	padding: 0;
 	background: linear-gradient(to bottom right, #0cf2ee, #F7C331);
 }
 
 section{ display: flex; }
-.main{
+.main{/*property of main div*/
 	width: 36%;
 	padding: 1%;
 
 }
-.side{
+.side{/*property of side div*/
 background-color: #d8c093;
 width: 60%;
 padding: 1%;
@@ -69,12 +69,12 @@ border-radius: 15px 50px 30px;
 
 }
 
-p{
+p{/*property of p text*/
 	text-align: center;
 	font-size: 20px;
 	padding: 4px;
 }
-button{
+button{/*property of button*/
 	font-family: arial;
 	text-transform: uppercase;
 	font-size: 20px;
@@ -88,7 +88,7 @@ button{
 	margin-left: 350px;
 }
 /*------footer-----*/
- footer{
+ footer{/*property of button*/
 	width: 100%;
 	background-color: #066d6b;
     height:100px;
@@ -97,136 +97,164 @@ text-align: center;
 padding-bottom: 40px;
 padding-top: 80px;
 }
-img{
+img{/*property of image*/
 	border-radius: 500px 500px 500px ;
 }
 
 
-.about{
+.about{/*property of about div*/
 	width: 63%;
 	padding: 1%;
 }
-.black{
+.black{/*property of black div*/
 	width: 33%;
 	padding-top: 1%;
 }
 
-h3{
+h3{/*property of h3 text*/
 	text-align: center;
 	font-size: 40px;
 }
 
-.social{
+.social{/*property of social div*/
 	width: 38%;
 	padding: 1%;
 	padding-left: 10%;
 }
-.box{
+.box{/*property of box div*/
 	width: 58%;
 	padding: 0%;
 	
 }
-.map{
+.map{/*property of map div*/
 	width: 40%;
 	padding: 1%;
 	padding-top: 2%;
 }
-.info{
+.info{/*property of info div*/
 	width: 56%;
 	padding:1%;
 }
-h5{
+h5{/*property of h5 text*/
 	text-align: center;
 	font-size: 30px;
 
 }
-.container{
+.container{/*property of container*/
 	display: flex;
 	flex-direction: column;
 }
-.one{
+.one{/*property of div one*/
 	width: 90%; padding: 4%;
 	
 }
-.two{
+.two{/*property of div two*/
 	width: 90%;
 	padding: 4%;
 	
 }
-.three{
+.three{/*property of div three*/
 	width: 90%;
 	padding: 4%;
 }
-.four{
+.four{/*property of div four*/
 	width: 90%;
 	padding: 4%;
 }
-.five{
+.five{/*property of div five*/
 	width: 90%;
 	padding: 4%;
 }
-.six{
+.six{/*property of div six*/
 	width: 90%;
 	padding: 4%;
 }
-td
+td/*property of table layout*/
 {
     padding: 2px;
     border: 1px solid #E88741;
     }
- .personal{
+ .personal{/*property of img class personal*/
 	float: right;
 	border-radius: 0px 0px 0px;
 	padding-right: 400px;
 
 }
-.design1{
+.design1{/*property image class design1*/
 	border-radius: 0px 0px 0px;
-	padding-left: 350px;
+	padding-left: 100px;
 }
-.design2{
+.design2{/*property of image class design 2*/
 	border-radius: 0px 0px 0px;
-	padding-left: 350px;
+	padding-left: 100px;
 }
-.design3{
+.design3{/*property of image class design3*/
 	border-radius: 0px 0px 0px;
-	padding-left: 350px;
+	padding-left: 100px;
 }
-.design4{
+.design4{/*property of image class design4*/
 	border-radius: 0px 0px 0px;
-	padding-left: 350px;
+	padding-left: 100px;
 }
-.design5{
+.design5{/*property of image class design5*/
 	border-radius: 0px 0px 0px;
-	padding-left: 350px;
+	padding-left: 100px;
 }
-.mock1{
+.mock1{/*property of image class mock1*/
 	border-radius: 0px 0px 0px;
-	padding-left: 200px;
+	padding-left: 100px;
 }
-.mock2{
+.mock2{/*property of image class mock2*/
 	border-radius: 0px 0px 0px;
-	padding-left: 200px;
+	padding-left: 100px;
 }
-.mock3{
+.mock3{/*property of image class mock3*/
 	border-radius: 0px 0px 0px;
-	padding-left: 200px;
+	padding-left: 100px;
 }
-.mock4{
+.mock4{/*property of image class mock4*/
 	border-radius: 0px 0px 0px;
-	padding-left: 200px;
+	padding-left: 100px;
 }
-.mock5{
+.mock5{/*property of image class mock5*/
 	border-radius: 0px 0px 0px;
-	padding-left: 200px;
+	padding-left: 100px;
 }
-.intro{
+.cover{/*property of image class cover*/
+	border-radius: 0px 0px 0px;
+	padding-left: 4px;
+}
+.val1{/*property of image class val1*/
+	border-radius: 0px 0px 0px;
+	padding-left: 100px;
+}
+.val2{/*property of image class val2*/
+border-radius: 0px 0px 0px;
+	padding-left: 100px;
+}
+.val3{/*property of image class val3*/
+border-radius: 0px 0px 0px;
+	padding-left: 100px;
+}
+.val4{/*property of image class val4*/
+border-radius: 0px 0px 0px;
+	padding-left: 100px;
+}
+.val5{border-radius: 0px 0px 0px;/*property of image class val5*/
+	padding-left: 100px;
+}
+
+.val6{/*property of image class val6*/
+	border-radius: 0px 0px 0px;
+	padding-left: 100px;
+}
+.intro{/*property of class intro*/
 	width: 98%;
-	padding: 1%;
+	padding: 4%;
 	text-align: justify;
 	background-color: white;
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 500px){ /*to make system responsive on all devices*/
 nav ul{display: flex;}
 nav ul li{flex: 1 1 0;}
 section{flex-direction: column;}
@@ -240,7 +268,8 @@ section{flex-direction: column;}
 .info{width: 95%; order: 1;}
 .personal{ float: left; width: 50%; order: 1; }
 iframe{ width: 195%; }
-
+.intro{width: 98%; padding: 1%;}
+.cover{ width: 90%; height: 60%; }
 
 
 
