--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ section{flex-direction: column;}
 .info{width: 95%; order: 1;}
 .personal{ float: left; width: 50%; order: 1; }
 iframe{ width: 195%; }
-.intro{width: 98%; padding: 1%;}
+.intro{width: 98%; padding: 1%; text-align: justify;}
 .cover{ width: 90%; height: 60%; }
 
 
